--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,31 @@
 .App {
   text-align: center;
+  display: block;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.cont {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
+  height: 100vh;
   align-items: center;
+}
+
+.column-form {
+  margin: 24px 48px;
+  width: 600px;
+  text-align: left;
+}
+
+.column-form .column {
+  display: inline-block;
+}
+
+.column {
+  width: 900px;
+}
+
+.toggleBtns {
+  display: flex;
+  gap: 12px;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
